add delay buffers (observations and actions)

--- a/awd/data/cfg/go_bdx/duckling_episodic.yaml
+++ b/awd/data/cfg/go_bdx/duckling_episodic.yaml
@@ -53,17 +53,35 @@ sim:
 
 
 task:
+  # custom randomization code for observations (each step)
+  observation_randomizations:
+    enable: False
+    dof_pos_noise: 0.01
+    dof_vel_noise: 1.5
+    ang_vel_noise: 0.2
+    gravity_noise: 0.05
+  
+  add_obs_latency: False
+  randomize_obs_motor_latency: False
+  range_obs_motor_latency: [2, 10]
+  randomize_obs_imu_latency: False
+  range_obs_imu_latency: [1, 2]
+  
+  add_action_latency: False
+  randomize_action_latency: False
+  range_action_latency: [2, 4]
+
   randomize: False
   randomization_params:
     frequency: 600   # Define how many environment steps between generating new randomizations
-    observations:
-      range: [0, .002] # range for the white noise
-      operation: "additive"
-      distribution: "gaussian"
-    actions:
-      range: [0., .02]
-      operation: "additive"
-      distribution: "gaussian"
+    # observations:
+    #   range: [0, .002] # range for the white noise
+    #   operation: "additive"
+    #   distribution: "gaussian"
+    # actions:
+    #   range: [0., .02]
+    #   operation: "additive"
+    #   distribution: "gaussian"
     sim_params: 
       gravity:
         range: [0, 0.4]
