--- a/awd/data/cfg/mini2_bdx/duckling_command.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_command.yaml
@@ -57,7 +57,7 @@ env:
     torqueRewardScale: -0.005
     feetAirTimeRewardScale: 0.05
     actionRateRewardScale: -0.005
-    standStillRewardScale: -0.3
+    standStillRewardScale: -0.0
     footSlideRewardScale: -0.0005
 
     # normalization
@@ -124,12 +124,21 @@ sim:
 task:
   # custom randomization code for observations (each step)
   observation_randomizations:
-    enable: True
-    dof_pos: 0.01
-    dof_vel: 1.5
-    lin_vel: 0.1
-    ang_vel: 0.2
-    gravity: 0.05
+    enable: False
+    dof_pos_noise: 0.01
+    dof_vel_noise: 1.5
+    ang_vel_noise: 0.2
+    gravity_noise: 0.05
+  
+  add_obs_latency: False
+  randomize_obs_motor_latency: False
+  range_obs_motor_latency: [2, 10]
+  randomize_obs_imu_latency: False
+  range_obs_imu_latency: [1, 2]
+  
+  add_action_latency: False
+  randomize_action_latency: False
+  range_action_latency: [2, 4]
   
   # standard isaac envs randomizations.
   randomize: False
