--- a/awd/data/cfg/mini2_bdx/duckling_standing.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_standing.yaml
@@ -2,26 +2,26 @@
 env: 
   numEnvs: 4096
   envSpacing: 1
-  episodeLength: 600
+  episodeLength: 20 #s
   isFlagrun: False
   enableDebugVis: False
   
   pdControl: True
   powerScale: 1.0
-  controlFrequencyInv: 2 # 30 Hz
+  controlFrequencyInv: 2 # 50 Hz
   stateInit: "Hybrid"
   hybridInitProb: 0.5
-  numAMPObsSteps: 10
+  numAMPObsSteps: 2
 
-  pushRobots: False
-  pushStep: 150 #s
-  pushStepRandomRange: 80 # push works at pushStep +- pushStepRandomRange
-  continousPushSteps: 30
-  maxPushVelXy: 0.05
+  pushRobots: True
+  pushStep: 3 #s
+  pushStepRandomRange: 1 #s | push works at pushStep +- pushStepRandomRange
+  continousPushSteps: 10
+  maxPushVelXy: 0.4 # m/s
 
   # COM is randomized only once for each actor, but not at each reset
   randomizeCom: False
-  comRandomizeRange: [-0.05, 0.05]
+  comRandomizeRange: [-0.03, 0.03]
   randomizeTorques: False
   torqueMultiplierRange: [0.85, 1.15]
 
@@ -30,17 +30,16 @@ env:
   localRootObs: True
   keyBodies: ["left_foot", "right_foot"]
   contactBodies: ["foot_assembly", "foot_assembly_2"]
+  maskJoints: ['neck_pitch', 'head_pitch', 'head_yaw', "head_roll", "left_antenna", "right_antenna"]
   maskJointRandomRange: [-0.5, 0.5]
-  terminationHeight: -0.1
+  terminationHeight: -0.05
+  initHeight: 0.17
   enableEarlyTermination: True
   enableTaskObs: True
-  terminationHeight: -0.05
-  initHeight: 0.2
-  maskJoints: ['neck_pitch', 'head_pitch', 'head_yaw']
   randomizeMaskJoints: False
-  commandChangeStepsMin: 150
-  commandChangeStepsMax: 200
-  period: 0.43
+  commandChangeStepsMin: 5 #s
+  commandChangeStepsMax: 6 #s
+  period: 0.66 #s
 
   asset:
     assetRoot: "awd/data/assets"
@@ -99,16 +98,16 @@ env:
 sim:
   substeps: 1
   physx:
-    num_threads: 8
+    num_threads: 4
     solver_type: 1  # 0: pgs, 1: tgs
     num_position_iterations: 4
-    num_velocity_iterations: 0
-    contact_offset: 0.01
+    num_velocity_iterations: 1
+    contact_offset: 0.02
     rest_offset: 0.0
-    bounce_threshold_velocity: 0.5
-    max_depenetration_velocity: 1.0
+    bounce_threshold_velocity: 0.2
+    max_depenetration_velocity: 100.0
     default_buffer_size_multiplier: 5.0
-    contact_collection: 2
+    contact_collection: 1
 
   flex:
     num_inner_iterations: 10
@@ -120,19 +119,21 @@ task:
   observation_randomizations:
     enable: False
     dof_pos_noise: 0.01
-    dof_vel_noise: 1.5
+    dof_vel_noise: 0.5
     ang_vel_noise: 0.2
     gravity_noise: 0.05
   
   add_obs_latency: False
   randomize_obs_motor_latency: False
-  range_obs_motor_latency: [2, 10]
+  range_obs_motor_latency: [0, 1] # ms
   randomize_obs_imu_latency: False
-  range_obs_imu_latency: [1, 2]
+  range_obs_imu_latency: [0, 50] #ms
   
   add_action_latency: False
   randomize_action_latency: False
-  range_action_latency: [2, 4]
+  range_action_latency: [20, 50] #ms
+  
+  # standard isaac envs randomizations
 
   randomize: False
   randomization_params:
