--- a/awd/data/cfg/mini2_bdx/duckling_command.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_command.yaml
@@ -11,7 +11,7 @@ env:
   controlFrequencyInv: 2 # 50 Hz
   stateInit: "Hybrid"
   hybridInitProb: 0.5
-  numAMPObsSteps: 20
+  numAMPObsSteps: 15
 
   pushRobots: True
   pushStep: 3 #s
@@ -40,6 +40,11 @@ env:
   commandChangeStepsMin: 7 #s
   commandChangeStepsMax: 8 #s
   period: 0.66 #s
+
+  actionHistoryInputs: 50
+  actionHistoryInputsDecimation: 2
+  obsHistoryInputs: 50
+  obsHistoryInputsDecimation: 2
 
   asset:
     assetRoot: "awd/data/assets"
