UAN: set initial dof pos to all 0

--- a/awd/data/cfg/mini2_bdx/duckling_model_joints.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_model_joints.yaml
@@ -33,7 +33,7 @@ env:
   enableTaskObs: True
   randomizeMaskJoints: False
 
-  waveTypes: ["gaussian"]
+  waveTypes: ["sine", "square", "gaussian"]
   sine_params: 
     amplitudes: [10, 20, 30, 40] # deg
     frequencies: [2, 5, 4, 6] # Hz
