--- a/awd/data/cfg/mini2_bdx/duckling_uan.yaml
+++ b/awd/data/cfg/mini2_bdx/duckling_uan.yaml
@@ -9,7 +9,7 @@ env:
   
   pdControl: False
   powerScale: 1.0
-  controlFrequencyInv: 4 # 50 Hz
+  controlFrequencyInv: 1
   stateInit: "Hybrid"
   hybridInitProb: 0.0
   numAMPObsSteps: 2
